# musicreco

./: .env.example  README.md  pyproject.toml
app/: main.py
app/routers/: web.py
app/services/: amazon.py  apple_music.py  vibes.py
app/static/css/: style.css
app/templates/: index.html
docs/: ARCHITECTURE.md
